--- a/main.html
+++ b/main.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Block or Inline</title>
+<style>
+  .block {
+    display: block;
+  }
+  .inline {
+    display: inline;
+  }
+</style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+<div class="block">
+  <button data-ns-test="block-inline-button" class="inline">Test1</button>
+  <button data-ns-test="block-inline-button" class="inline">Test2</button>
+  <div data-ns-test="block-inline-div" class="block">Test1</div>
+  <div data-ns-test="block-inline-div" class="block">Test2</div>
+  <span data-ns-test="block-inline-span" class="inline">Test1</span>
+  <span data-ns-test="block-inline-span" class="inline">Test2</span>
+  <p data-ns-test="block-inline-p" class="block">Test1</p>
+  <p data-ns-test="block-inline-p" class="block">Test2</p>
+  <input data-ns-test="block-inline-input" class="inline" type="text" value="Test1">
+  <input data-ns-test="block-inline-input" class="inline" type="text" value="Test2">
+  <cite data-ns-test="block-inline-cite" class="inline">Test1</cite>
+  <cite data-ns-test="block-inline-cite" class="inline">Test2</cite>
+  <code data-ns-test="block-inline-code" class="inline">Test1</code>
+  <code data-ns-test="block-inline-code" class="inline">Test2</code>
+  <h1 data-ns-test="block-inline-h1" class="block">Test1</h1>
+  <h1 data-ns-test="block-inline-h1" class="block">Test2</h1>
+  <sup data-ns-test="block-inline-sup" class="inline">Test1</sup>
+  <sup data-ns-test="block-inline-sup" class="inline">Test2</sup>
+  <sub data-ns-test="block-inline-sub" class="inline">Test1</sub>
+  <sub data-ns-test="block-inline-sub" class="inline">Test2</sub>
+</div>
 </body>
-
 </html>
