--- a/main.html
+++ b/main.html
@@ -1,40 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Block or Inline</title>
-<style>
-  .block {
-    display: block;
-  }
-  .inline {
-    display: inline;
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Block and Inline Elements</title>
 </head>
 <body>
-<div class="block">
-  <button data-ns-test="block-inline-button" class="inline">Test1</button>
-  <button data-ns-test="block-inline-button" class="inline">Test2</button>
-  <div data-ns-test="block-inline-div" class="block">Test1</div>
-  <div data-ns-test="block-inline-div" class="block">Test2</div>
-  <span data-ns-test="block-inline-span" class="inline">Test1</span>
-  <span data-ns-test="block-inline-span" class="inline">Test2</span>
-  <p data-ns-test="block-inline-p" class="block">Test1</p>
-  <p data-ns-test="block-inline-p" class="block">Test2</p>
-  <input data-ns-test="block-inline-input" class="inline" type="text" value="Test1">
-  <input data-ns-test="block-inline-input" class="inline" type="text" value="Test2">
-  <cite data-ns-test="block-inline-cite" class="inline">Test1</cite>
-  <cite data-ns-test="block-inline-cite" class="inline">Test2</cite>
-  <code data-ns-test="block-inline-code" class="inline">Test1</code>
-  <code data-ns-test="block-inline-code" class="inline">Test2</code>
-  <h1 data-ns-test="block-inline-h1" class="block">Test1</h1>
-  <h1 data-ns-test="block-inline-h1" class="block">Test2</h1>
-  <sup data-ns-test="block-inline-sup" class="inline">Test1</sup>
-  <sup data-ns-test="block-inline-sup" class="inline">Test2</sup>
-  <sub data-ns-test="block-inline-sub" class="inline">Test1</sub>
-  <sub data-ns-test="block-inline-sub" class="inline">Test2</sub>
-</div>
+
+    <!-- Button Element -->
+    <div>
+        <button data-ns-test="block-inline-button">Test1</button>
+        <button data-ns-test="block-inline-button">Test2</button>
+    </div>
+    <p>Answer: Inline</p>
+
+    <!-- Div Element -->
+    <div>
+        <div data-ns-test="block-inline-div">Test1</div>
+        <div data-ns-test="block-inline-div">Test2</div>
+    </div>
+    <p>Answer: Block</p>
+
+    <!-- Span Element -->
+    <div>
+        <span data-ns-test="block-inline-span">Test1</span>
+        <span data-ns-test="block-inline-span">Test2</span>
+    </div>
+    <p>Answer: Inline</p>
+
+    <!-- P Element -->
+    <div>
+        <p data-ns-test="block-inline-p">Test1</p>
+        <p data-ns-test="block-inline-p">Test2</p>
+    </div>
+    <p>Answer: Block</p>
+
+    <!-- Input Element -->
+    <div>
+        <input type="text" data-ns-test="block-inline-input" value="Test1">
+        <input type="text" data-ns-test="block-inline-input" value="Test2">
+    </div>
+    <p>Answer: Inline</p>
+
+    <!-- Cite Element -->
+    <div>
+        <cite data-ns-test="block-inline-cite">Test1</cite>
+        <cite data-ns-test="block-inline-cite">Test2</cite>
+    </div>
+    <p>Answer: Inline</p>
+
+    <!-- Code Element -->
+    <div>
+        <code data-ns-test="block-inline-code">Test1</code>
+        <code data-ns-test="block-inline-code">Test2</code>
+    </div>
+    <p>Answer: Inline</p>
+
+    <!-- H1 Element -->
+    <div>
+        <h1 data-ns-test="block-inline-h1">Test1</h1>
+        <h1 data-ns-test="block-inline-h1">Test2</h1>
+    </div>
+    <p>Answer: Block</p>
+
+    <!-- Sup Element -->
+    <div>
+        <sup data-ns-test="block-inline-sup">Test1</sup>
+        <sup data-ns-test="block-inline-sup">Test2</sup>
+    </div>
+    <p>Answer: Inline</p>
+
+    <!-- Sub Element -->
+    <div>
+        <sub data-ns-test="block-inline-sub">Test1</sub>
+        <sub data-ns-test="block-inline-sub">Test2</sub>
+    </div>
+    <p>Answer: Inline</p>
+
 </body>
 </html>
