--- a/main.html
+++ b/main.html
@@ -11,71 +11,75 @@
     <div>
         <button data-ns-test="block-inline-button">Test1</button>
         <button data-ns-test="block-inline-button">Test2</button>
+		Answer:Inline
     </div>
-    <p>Answer: Inline</p>
 
     <!-- Div Element -->
     <div>
         <div data-ns-test="block-inline-div">Test1</div>
         <div data-ns-test="block-inline-div">Test2</div>
-    </div>
-    <p>Answer: Block</p>
-
+		Answer: Block
+	</div>
     <!-- Span Element -->
     <div>
         <span data-ns-test="block-inline-span">Test1</span>
         <span data-ns-test="block-inline-span">Test2</span>
+		Answer: Inline
     </div>
-    <p>Answer: Inline</p>
+
 
     <!-- P Element -->
     <div>
         <p data-ns-test="block-inline-p">Test1</p>
         <p data-ns-test="block-inline-p">Test2</p>
+		Answer: Block
     </div>
-    <p>Answer: Block</p>
 
     <!-- Input Element -->
     <div>
         <input type="text" data-ns-test="block-inline-input" value="Test1">
         <input type="text" data-ns-test="block-inline-input" value="Test2">
+		Answer: Inline
     </div>
-    <p>Answer: Inline</p>
+
 
     <!-- Cite Element -->
     <div>
         <cite data-ns-test="block-inline-cite">Test1</cite>
         <cite data-ns-test="block-inline-cite">Test2</cite>
+		Answer: Inline
     </div>
-    <p>Answer: Inline</p>
+
 
     <!-- Code Element -->
     <div>
         <code data-ns-test="block-inline-code">Test1</code>
         <code data-ns-test="block-inline-code">Test2</code>
+		Answer: Inline
     </div>
-    <p>Answer: Inline</p>
+
 
     <!-- H1 Element -->
     <div>
         <h1 data-ns-test="block-inline-h1">Test1</h1>
         <h1 data-ns-test="block-inline-h1">Test2</h1>
+		Answer: Block
     </div>
-    <p>Answer: Block</p>
+
 
     <!-- Sup Element -->
     <div>
         <sup data-ns-test="block-inline-sup">Test1</sup>
         <sup data-ns-test="block-inline-sup">Test2</sup>
+		Answer: Inline
     </div>
-    <p>Answer: Inline</p>
 
     <!-- Sub Element -->
     <div>
         <sub data-ns-test="block-inline-sub">Test1</sub>
         <sub data-ns-test="block-inline-sub">Test2</sub>
-    </div>
-    <p>Answer: Inline</p>
+		Answer: Inline
+	</div>
 
 </body>
 </html>
