--- a/main.html
+++ b/main.html
@@ -3,83 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Block and Inline Elements</title>
+    <title>Block or Inline</title>
 </head>
 <body>
 
-    <!-- Button Element -->
     <div>
         <button data-ns-test="block-inline-button">Test1</button>
         <button data-ns-test="block-inline-button">Test2</button>
-		Answer:Inline
+        Answer: Inline
     </div>
 
-    <!-- Div Element -->
     <div>
         <div data-ns-test="block-inline-div">Test1</div>
         <div data-ns-test="block-inline-div">Test2</div>
-		Answer: Block
-	</div>
-    <!-- Span Element -->
+        Answer: Block
+    </div>
+
     <div>
         <span data-ns-test="block-inline-span">Test1</span>
         <span data-ns-test="block-inline-span">Test2</span>
-		Answer: Inline
+        Answer: Inline
     </div>
 
-
-    <!-- P Element -->
     <div>
         <p data-ns-test="block-inline-p">Test1</p>
         <p data-ns-test="block-inline-p">Test2</p>
-		Answer: Block
+        Answer: Block
     </div>
 
-    <!-- Input Element -->
     <div>
-        <input type="text" data-ns-test="block-inline-input" value="Test1">
-        <input type="text" data-ns-test="block-inline-input" value="Test2">
-		Answer: Inline
+        <input data-ns-test="block-inline-input" value="Test1">
+        <input data-ns-test="block-inline-input" value="Test2">
+        Answer: Inline
     </div>
 
-
-    <!-- Cite Element -->
     <div>
         <cite data-ns-test="block-inline-cite">Test1</cite>
         <cite data-ns-test="block-inline-cite">Test2</cite>
-		Answer: Inline
+        Answer: Inline
     </div>
 
-
-    <!-- Code Element -->
     <div>
         <code data-ns-test="block-inline-code">Test1</code>
         <code data-ns-test="block-inline-code">Test2</code>
-		Answer: Inline
+        Answer: Inline
     </div>
 
-
-    <!-- H1 Element -->
     <div>
         <h1 data-ns-test="block-inline-h1">Test1</h1>
         <h1 data-ns-test="block-inline-h1">Test2</h1>
-		Answer: Block
+        Answer: Block
     </div>
 
-
-    <!-- Sup Element -->
     <div>
         <sup data-ns-test="block-inline-sup">Test1</sup>
         <sup data-ns-test="block-inline-sup">Test2</sup>
-		Answer: Inline
+        Answer: Inline
     </div>
 
-    <!-- Sub Element -->
     <div>
         <sub data-ns-test="block-inline-sub">Test1</sub>
         <sub data-ns-test="block-inline-sub">Test2</sub>
-		Answer: Inline
-	</div>
+        Answer: Inline
+    </div>
 
 </body>
 </html>
